[package]
name = "actuator_temperature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datum = { path = "../datum" }
device = { path = "../device" }
actuator = { path = "../actuator" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
