[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datum = { path = "../datum" }
sensor = { path = "../sensor" }

actix-rt = "2.2"
actix-service = "2.0"
actix-server = "2.3"
actix-web = "4.0"
awc = { version = "3.0.0-beta.11", features = [ "openssl" ] }
futures = "0.3"
mdns = "3.0.0"
pin-utils = "0.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }