[package]
name = "environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datum = { path = "../datum" }
device = { path = "../device" }
chrono = { version = "0.4.31", features = [] }
rand = "0.8.5"
regex = "1.10.2"