[package]
name = "sensor_temperature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datum = { path = "../datum" }
sensor = { path = "../sensor" }

local-ip-address = "0.5.6"
mdns-sd = "0.10.1"
uuid = {version = "1.6.1", features = ["v4", "serde"]}